--- a/app.css
+++ b/app.css
@@ -1,3 +1,9 @@
-h1{
-    color:purple;
+ body{
+ 	background: url(https://images.unsplash.com/photo-1532386236358-a33d8a9434e3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=678&q=80);
+ 	background-size: cover;
+ 	background-position: center;
+ }
+#content{
+	text-align: center;
+	padding-top:25%;
 }
